<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="4dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_home_title_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/DetailStyle"/>

                <TextView
                    android:id="@+id/tv_count_day"
                    style="@style/DetailStyle"
                    android:layout_marginLeft="@dimen/dp_6"/>

                <TextView
                    style="@style/DetailStyle"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/day"
                    />

                <TextView
                    android:id="@+id/tv_count_view"
                    style="@style/DetailStyle"
                    android:layout_marginLeft="@dimen/dp_6"/>

                <TextView
                    style="@style/DetailStyle"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/view_count"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_address"
                style="@style/DetailStyle"
                android:layout_marginTop="3dp"
                android:text="@string/app_name"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_avator"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:textColor="@color/color_white"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_toRightOf="@+id/img_avator"/>

</RelativeLayout>