<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/please_login"
                    android:textColor="@color/color_home_title_bg"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Username"
                        android:inputType="textPersonName"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingBottom="2dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/go"
                    android:textColor="#d3d3d3"
                    >
                </Button>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_your_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/fab_plus"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv"
        android:layout_marginTop="-20dp"
        android:layout_alignEnd="@id/cv"
        android:layout_marginEnd="-20dp"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_homepage_left_drawer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>


</RelativeLayout>
